...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/coloreSecondario"
        android:onClick="navigateToStudent"
        android:text="@string/crea_un_account_studente"
        android:textColor="@color/colorBackground"
        app:layout_constraintBottom_toTopOf="@+id/registrazione"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creaAccountTutor"
        app:layout_constraintWidth_percent="0.8" />

    <Button
...
